GNOME Bugzilla – Bug 780897
ttml: Subtitle presentation stops after seek
Last modified: 2017-04-09 07:44:38 UTC
After seeking, subtitle presentation stops. This can be demonstrated by seeking in gst-play using left/right arrows, e.g.: gst-play-1.0 http://rdmedia.bbc.co.uk/dash/ondemand/elephants_dream/1/client_manifest-all.mpd The reason appears to be that ttmlparse doesn't push downstream the new segment event it receives after a seek. Patch to follow...
Created attachment 349224 [details] [review] ttmlparse: push segment events downstream
Attachment 349224 [details] pushed as 28e0bdb - ttmlparse: push segment events downstream