ttmlparse: push segment events downstream

Without this, subtitles will stop after seeking.

https://bugzilla.gnome.org/show_bug.cgi?id=780897